# airbnb-clone-backend

./: ReadMe.md  pyproject.toml  test.py  test1_oop_with_python.py  test2.py
#2 OOP with Ptyhon & Practice/: test1.py  test3.py
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py
categories/: admin.py  models.py  serializers.py  serializers_new.py  serializers_previous.py  serialrizers.py  urls.py  views.py  views_APIView.py  views_ViewSet.py  views_previous.py
categories/migrations/: 0001_initial.py
categories/templates/: hhh.html  html.html
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_rename_participants_message_participant.py
experiences/: admin.py  models.py  serializer.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category.py  0003_rename_descriptioin_experience_description.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  (+1 more)
reviews/: admin.py  models.py  serializers.py
rooms/: admin.py  asdf.py  models.py  serializers.py  serializers.txt  tests.py  urls.py  views.py  views_django_templates.py
testAPP/: apps.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+25 files in other folders)
